--- a/package.json
+++ b/package.json
@@ -95,6 +95,8 @@
     "connect-flash": "~0.1.1",
     "connect-mongo": "~2.0.3",
     "cookie-parser": "~1.4.4",
+    "decompress": "~4.2.0",
+    "decompress-unzip": "~4.0.1",
     "del": "~4.1.1",
     "escape-string-regexp": "~2.0.0",
     "eslint-plugin-angular": "~4.0.1",
